--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -37,7 +37,7 @@ html {
 }
 
 .container {
-    font-family: $primary-font; // Poppins
+    font-family: 'Marcellus SC', sans-serif;
     background-color: $color-primary-light;
     color: $color-primary-darkest;
 
@@ -63,12 +63,6 @@ html {
 
 .container > main {
     grid-area: main;
-
-    // display: grid;
-    // grid-template-rows: repeat(2, 100vh) repeat(2, min-content);
-    
-    // spacing between sections
-    // grid-gap: 3rem;
 }
 
 .container > .footer {
@@ -86,8 +80,8 @@ html {
 
 footer {
     // text-align: center;
-    padding-top: 6.2rem;
-    padding-left: 37.5%;
+    padding-top: 23rem;
+    padding-left: 41.5%;
 }
 
 // toggles bg-color and text-color of entire page
