--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -88,6 +88,7 @@
         font-family: inherit;
         margin: 1rem;
         position: relative;
+        letter-spacing: 2px;
     }
 
     &__item:not(:last-child)::after {
