--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:400,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:300,400,500,700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Poppins:400,700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Roboto:300,400,500,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barrio&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kirang+Haerang&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
