--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,28 +1,170 @@
 .about {
-    padding-top: 7rem;
-
     display: grid;
-    grid-template-columns: minmax(1rem, 10rem) 1fr minmax(1rem, 10rem);
-    grid-template-rows: 7rem 1fr;
-    grid-gap: 5rem;
+    grid-template-columns: 50rem 1fr;
+    margin-top: -8rem;
 
-    &__container {
-        grid-column: 2 / 3;
+    &__img {
+        width: 100%;
+        padding: 10rem;
 
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 7rem;
-        justify-content: center;
-        align-items: center;
-        
-        img {
-            border-radius: 10%;
-            height: 50rem;
-            width: 40rem;
-            object-fit: cover;
-            grid-column: 1 / 2;
+        & > img {
+            height: 60rem;
+        }
+    }
 
-            justify-self: end;
+    &__form {
+        align-self: center;
+        padding-right: 10rem;
+    }
+
+    &__form--info {
+        padding: 2rem;
+        border: solid 3px inherit;
+        border-radius: 12px 0 12px 0;
+
+        display: flex;
+        flex-direction: column;
+
+        & > legend {
+            font-family: 'Oi', sans-serif;
+            font-size: 2rem;
+            letter-spacing: 0.5rem;
+            padding: 0 1rem;
+        }
+
+        & > .sub-wrapper {
+            display: flex;
+            align-items: center;
+            margin-top: -1rem;
+            margin-left: -0.5rem;
+            margin-bottom: 1.5rem;
+
+            & > img {
+                width: 3rem;
+                padding: 0 0.5rem;
+                // margin-top: 1.5rem;
+                // margin-right: 3.5rem;
+            }
+
+            & > h3 {
+                font-size: 1.5rem;
+            }
+        }
+    }
+    
+    &__form--info > &--wrapper {
+        margin-bottom: 1.5rem;
+        padding-bottom: 0.5rem;
+
+        &:not(:last-child) {
+            border-bottom: 2px dotted $color-primary-dark;
+        }
+        &:last-child {
+            margin-bottom: -3rem;
+        }
+
+        & > label {
+            font-size: 1.5rem;
+        }
+
+        #details, #actions, #inventory {
+            width: 100%;
+            background-color: transparent;
+            border: none;
+            color: inherit;
+            overflow: hidden;
+            resize: none;
+            padding-left: 6.7rem;
+            margin-top: -1.9rem;
+            font-family: 'Permanent Marker', sans-serif;
+            letter-spacing: 1px;
+        }
+
+        #actions,
+        #inventory {
+            font-family: 'Redacted Script', sans-serif;
+        }
+
+        #actions {
+            padding-left: 5rem;
+        }
+
+        #inventory {
+            padding-left: 6rem;
+            margin-bottom: -3.5rem;
+        }
+    }
+
+    &__form--info > &--wrapper > input {
+        padding-left: 0.8rem;
+    }
+
+    &__form--info > &--wrapper > input,
+    &__form--info > &--wrapper > #skills > .skills-wrapper > input {
+        border: none;
+        background-color: transparent;
+        color: inherit;
+
+        font-family: 'Permanent Marker', sans-serif;
+        letter-spacing: 1px;
+    }
+
+    &__form--info > &--wrapper > #skills {
+        border: none;
+
+        & > legend {
+            font-size: 1.5rem;
+        }
+    }
+
+    .skills-wrapper {
+        display: flex;
+        flex-direction: column;
+        margin-top: -1.8rem;
+
+        & > input {
+            padding-left: 5.2rem;
+            padding-bottom: 0.5rem;
         }
     }
 }
+
+.dark-mode > main > .about > .about__form > .about__form--info > .about--wrapper {
+    border-color: $color-primary-light;
+}
+
+// toggles color of icons
+.dark-mode > main > .about > .about__form > .about__form--info > .sub-wrapper > img {
+    // invert png so black becomes white, and vice versa
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
+}
+
+// .about {
+//     padding-top: 7rem;
+
+//     display: grid;
+//     grid-template-columns: minmax(1rem, 10rem) 1fr minmax(1rem, 10rem);
+//     grid-template-rows: 7rem 1fr;
+//     grid-gap: 5rem;
+
+//     &__container {
+//         grid-column: 2 / 3;
+
+//         display: grid;
+//         grid-template-columns: repeat(2, 1fr);
+//         grid-gap: 7rem;
+//         justify-content: center;
+//         align-items: center;
+        
+//         img {
+//             border-radius: 10%;
+//             height: 50rem;
+//             width: 40rem;
+//             object-fit: cover;
+//             grid-column: 1 / 2;
+
+//             justify-self: end;
+//         }
+//     }
+// }
