--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import "base";
 @import "typography";
 
-// @import "about";
+@import "about";
 // @import "animations";
 // @import "footer";
 @import "header";
