--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,11 +1,13 @@
 .about {
     display: grid;
     grid-template-columns: 50rem 1fr;
-    margin-top: -8rem;
+    height: 80vh;
+    width: 100%;
 
     &__img {
         width: 100%;
         padding: 10rem;
+        margin-top: -7rem;
 
         & > img {
             height: 60rem;
@@ -15,6 +17,7 @@
     &__form {
         align-self: center;
         padding-right: 10rem;
+        margin-top: -8rem;
     }
 
     &__form--info {
@@ -42,8 +45,6 @@
             & > img {
                 width: 3rem;
                 padding: 0 0.5rem;
-                // margin-top: 1.5rem;
-                // margin-right: 3.5rem;
             }
 
             & > h3 {
