--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
     height: 7.5rem;
     width: 100%;
     background-color: $color-primary-light;
@@ -9,7 +10,7 @@
     transition: background-color .4s ease-out;
 
     &__logo {
-        align-content: center;
+        margin-left: 8rem;
     }
 
     &__logo > img {
@@ -157,7 +158,6 @@
             content: "";
             position: absolute;
             left: 0;
-            // transition: all 0.2s;
         }
 
         &::before { top: -0.8rem; }
@@ -172,11 +172,6 @@
     &__button:hover &__icon::after {
         top: 1rem;
     }
-
-    // &__checkbox:checked + &__button &__icon {
-    //     background-color: transparent;
-
-    // }
 
     &__checkbox:checked + &__button &__icon::before {
         transform: rotate(135deg);
